# data-science-journey

./: .gitignore  README.md  data_science_scratch.ipynb  math.ipynb  practical_sql.sql  pyproject.toml  python_data_analysis.ipynb
.github/workflows/: docker.yml
docker/: Dockerfile
docker/CI/: Dockerfile
docker/api/: Dockerfile  app.py
docker/compose/: docker-compose.yaml
docker/compose/backend/: app.py
docker/compose/frontend/sitio/: linktree.html  requests.js
docker/crud/: docker-compose.yml
docker/crud/nginx/: default.conf
docker/crud/php/: Dockerfile
docker/crud/src/: index.php
docker/multi-stage builds/: Dockerfile  requirements-serve.txt  serve.py  train.py
docker/sitio/: index.html
